--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -89,12 +89,14 @@ jobs:
 
     - name: Install dependencies - GCC
       if: ${{ matrix.compiler == 'GCC' }}
-      run: brew install gcc gdb
+      run: |
+        brew install gcc gdb
+        export COMPILER_PATH=$(brew prefix gcc)/bin
 
     - name: Configure
       run: >
-        CC=${{ fromJSON('{"AppleClang": "cc", "Clang": "/usr/local/opt/llvm/bin/clang", "GCC": "/usr/local/opt/gcc/bin/gcc-11"}')[matrix.compiler] }}
-        CXX=${{ fromJSON('{"AppleClang": "c++", "Clang": "/usr/local/opt/llvm/bin/clang++", "GCC": "/usr/local/opt/gcc/bin/g++-11"}')[matrix.compiler] }}
+        CC=${{ fromJSON('{"AppleClang": "cc", "Clang": "/usr/local/opt/llvm/bin/clang", "GCC": "$COMPILER_PATH/gcc-11"}')[matrix.compiler] }}
+        CXX=${{ fromJSON('{"AppleClang": "c++", "Clang": "/usr/local/opt/llvm/bin/clang++", "GCC": "$COMPILER_PATH/g++-11"}')[matrix.compiler] }}
         cmake -S ${{ github.workspace }}/source -B ${{ github.workspace }}/build
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
         -DODBC_PROVIDER=${{ matrix.odbc_provider }}
