--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-2019, windows-2016]
+        os: [windows-2019]
         odbc_provider: [MDAC]
         compiler: [MSVC]
         build_type: [Debug, RelWithDebInfo, Release]
