--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -136,6 +136,16 @@ jobs:
           name: clickhouse-odbc-linux
           path: ${{ github.workspace }}/build/clickhouse-odbc-*
 
+    - name: Upload artifacts as release assets
+      #if: github.event_name == 'release'
+      uses: svenstaro/upload-release-action@v2
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: ${{ github.workspace }}/build/clickhouse-odbc-*
+        overwrite: true
+        tag: ${{ github.ref }}
+        file_glob: true
+
     # Temporarily disable tests to speed up debugging of depending workflow
     # - name: Test - Run unit tests
     #   working-directory: ${{ github.workspace }}/build
