--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -63,6 +63,11 @@ jobs:
       run: |
         docker run --entrypoint /bin/bash -v $(realpath ${{ github.workspace }}/packages):/packages clickhouse_odbc_tester:${{ matrix.odbc_provider }}-${{ matrix.base_os }} -c 'cd clickhouse-odbc-build && ls -lah && ninja package ||: ; mv clickhouse-odbc-* /packages && ls -lah /packages'
 
+    - name: List artifacts
+      run: |
+        echo REF: ${{ github.ref }}
+        ls -lahR ${{ github.workspace }}/packages/
+
     - name: Upload the artifacts
       uses: actions/upload-artifact@v3
       with:
