--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -129,6 +129,11 @@ jobs:
     - name: Package
       run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --target package
 
+    - name: List artifacts
+      run: |
+        echo REF: ${{ github.ref }}
+        ls -lahR ${{ github.workspace }}/build/
+
     - name: Upload the artifacts
       if:  ${{ matrix.os == 'ubuntu-18.04' && matrix.compiler == 'GCC' && matrix.odbc_provider == 'UnixODBC' && matrix.build_type == 'Release' && matrix.runtime_link == 'dynamic-runtime' && matrix.third_parties == 'bundled-third-parties' }}
       uses: actions/upload-artifact@v3
@@ -138,6 +143,7 @@ jobs:
 
     - name: Upload artifacts as release assets
       #if: github.event_name == 'release'
+      if: ${{ matrix.build_type == 'Release' }}
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
