--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -119,6 +119,11 @@ jobs:
     - name: Package
       run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --target package
 
+    - name: List artifacts
+      run: |
+        echo REF: ${{ github.ref }}
+        ls -lahR ${{ github.workspace }}/build
+
     - name: Upload the artifacts
       if:  ${{ matrix.compiler == 'AppleClang' && matrix.odbc_provider == 'iODBC' && matrix.build_type == 'Release' }}
       uses: actions/upload-artifact@v3
@@ -128,6 +133,7 @@ jobs:
 
     - name: Upload artifacts as release assets
       #if: github.event_name == 'release'
+      if: ${{ matrix.build_type == 'Release' }}
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
